development/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app: Production
---
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    app: Development
---
apiVersion: v1
kind: Namespace
metadata:
  name: uat
  labels:
    app: Uat
---
