development/infrastructure-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  annotations:
    scale: "2"
#    #ingress.kubernetes.io/rewrite-target: /
#    #http.port: 80
#    #allow.http: false
#    #io.rancher.scheduler.global: true
#    #io.rancher.lb_service.target: "only-local"
spec:
  rules:
  - host: nexus.scipionyx.org
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8081
  - host: config.scipionyx.org
    http:
      paths:
      - backend:
          serviceName: scipionyx-config-server
          servicePort: 8888
