development/infrastructure-nexus.yaml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 1234
      volumes:
        - name: nexus
          persistentVolumeClaim:
            claimName: nexus
      containers:
        - name: nexus
          image: sonatype/nexus3:3.8.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus
              mountPath: /nexus-data
              
---

kind: Service
apiVersion: v1
metadata:
  name: nexus
  labels:
    k8s-app: nexus
spec:
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
    
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  annotations:
    scale: "2"
#    #ingress.kubernetes.io/rewrite-target: /
#    #http.port: 80
#    #allow.http: false
#    #io.rancher.scheduler.global: true
#    #io.rancher.lb_service.target: "only-local"
spec:
  rules:
  - host: nexus.scipionyx.org
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8081
